<resources>
    <string name="google_key">AIzaSyCQjYx_pSV5_IzvjSgsebvpbt5PI_-_i9U</string>
    <string name="app_name">GPS Tracking Users</string>
    <string name="app_title">GPS Tracking</string>
    <string name="username">Username</string>
    <string name="password">Password</string>
    <string name="login_c">LOGIN</string>
    <string name="signup">Sign up</string>
    <string name="signup_c">SIGN UP</string>
    <string name="update_c">UPDATE</string>
    <string name="get_password">Get Password</string>
    <string name="remember_me">Remember me?</string>
    <string name="username_cant_be_empty">Username can\'t be empty</string>
    <string name="password_cant_be_empty">Password can\'t be empty</string>
    <string name="no_internet_connection">No Internet connection</string>
    <string name="invalid_username_or_password">Invalid username or password</string>
    <string name="invalid_password">Invalid password</string>
    <string name="error_starting_trip_check_your_vehicles_options">Error starting trip\nCheck your vehicle\'s options</string>
    <string name="error_ending_trip_check_your_vehicles_options">Error ending trip\nCheck your vehicle\'s options</string>
    <string name="connection_error_try_again">Connection error, try again</string>
    <string name="unable_to_contact">Unable to contact</string>
    <string name="enter_your_username">Enter your username</string>
    <string name="enter_your_password">Enter your password</string>
    <string name="ok">Ok</string>
    <string name="cancel">Cancel</string>
    <string name="back">Back</string>
    <string name="invalid_username">Invalid username</string>
    <string name="password_sent_to_your_email">Password sent to your email.</string>
    <string name="your_name">Your Name</string>
    <string name="email_address">Email Address</string>
    <string name="re_password">Re-Password</string>
    <string name="report">Report</string>
    <string name="more">More...</string>
    <string name="address">Address</string>
    <string name="org_type">Organization Type</string>
    <string name="account_type">Account Type</string>
    <string name="personal">Personal</string>
    <string name="organization">Organization</string>
    <string name="your_name_cant_be_empty">Your name can\'t be empty</string>
    <string name="email_cant_be_empty">Email address can\'t be empty</string>
    <string name="email_is_not_valid">Email address is not valid</string>
    <string name="password_doesnt_match">Password doesn\'t match</string>
    <string name="select_your_account_type">Select your account type</string>
    <string name="username_exists">Username exists</string>
    <string name="vehicle_id_exists">Vehicle id exists</string>
    <string name="account_created_successfully">Account created successfully\nCheck your email and activate your account</string>
    <string name="please_wait">Please wait...</string>
    <string name="check_your_mail_and_activate_account">Check your mail and activate account</string>
    <string name="error_loading_data">Error loading data</string>
    <string name="no_vehicles_available">No vehicles available</string>
    <string name="tap_to_refresh">Tap to refresh</string>
    <string name="tap_to_add">Tap to add</string>
    <string name="close">Close</string>
    <string name="will_be_turned_on_soon">will be turned on soon.</string>
    <string name="has_started_trip_successfully">has started trip successfully</string>
    <string name="has_ended_current_trip_successfully">has ended current trip successfully</string>
    <string name="will_be_turned_off_soon">will be turned off soon.</string>
    <string name="turn">Turn</string>
    <string name="trip">Trip</string>
    <string name="trips">Trips</string>
    <string name="add_vehicle">Add Vehicle</string>
    <string name="edit_vehicle">Edit Vehicle</string>
    <string name="Vehicles">Vehicles</string>
    <string name="id">ID</string>
    <string name="name">Name</string>
    <string name="purpose">Purpose</string>
    <string name="licence_number">Licence Number</string>
    <string name="number">Number</string>
    <string name="color">Color</string>
    <string name="year">Year</string>
    <string name="model">Model</string>
    <string name="brand">Brand</string>
    <string name="add">Add</string>
    <string name="vehicle_added_successfully">Vehicle added successfully.</string>
    <string name="fetching_path">Fetching path</string>
    <string name="no_path_available">No path available for this trip</string>
    <string name="vehicle_updated_successfully">Vehicle updated successfully.</string>
    <string name="vehicle_deleted_successfully">Vehicle deleted successfully.</string>
    <string name="tracking_interval_updated_successfully">Tracking interval updated successfully.</string>
    <string name="vehicle_id_cant_be_empty">Vehicle id can\'t be empty</string>
    <string name="vehicle_password_cant_be_empty">Vehicle password can\'t be empty</string>
    <string name="vehicle_name_cant_be_empty">Vehicle name can\'t be empty</string>
    <string name="edit">Edit</string>
    <string name="delete">Delete</string>
    <string name="delete_vehicle">Delete vehicle?</string>
    <string name="logout">Logout</string>
    <string name="tracking_interval">Tracking Interval</string>
    <string name="update_profile">Update Profile</string>
    <string name="update_tracking_interval">Update Tracking Interval</string>
    <string name="profile_updated_successfully">Profile updated successfully</string>
    <string name="invalid_tracking_interval">Invalid tracking interval</string>
    <string name="exit">Exit</string>
    <string name="is_requesting_help">is requesting help</string>
    <string name="started_from">Started from</string>
    <string name="started_at">Started at</string>
    <string name="ended_in">Ended in</string>
    <string name="ended_at">Ended at</string>
    <string name="distance">Distance</string>
    <string name="duration">Duration</string>
    <string name="speed">Speed</string>
    <string name="km">km</string>
    <string name="m">m</string>
    <string name="days">D</string>
    <string name="hours">H</string>
    <string name="minutes">M</string>
    <string name="km_h">km/h</string>
    <string name="no_data">No data</string>
    <string name="no_trips_available">No trips available</string>
    <string name="not_ended_yet">Not ended yet</string>
    <string name="start_location">Start Location</string>
    <string name="end_location">End Location</string>

    <string-array name="acc_type">
        <item>@string/account_type</item>
        <item>@string/personal</item>
        <item>@string/organization</item>
    </string-array>

</resources>
