<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:paddingLeft="@dimen/screen_lr_spacing"
    android:paddingRight="@dimen/screen_lr_spacing"
    android:paddingTop="@dimen/screen_tb_spacing"
    android:paddingBottom="@dimen/screen_tb_spacing"
    android:layout_height="wrap_content"
    android:layout_width="match_parent">

    <LinearLayout
        android:id="@+id/layout_content"
        android:orientation="vertical"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <EditText
            android:textSize="@dimen/normal_text"
            android:singleLine="true"
            android:maxLines="1"
            android:scrollHorizontally="true"
            android:hint="@string/enter_your_username"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:id="@+id/text_username"
            android:layout_gravity="center_horizontal" />

        <LinearLayout
            android:paddingTop="@dimen/screen_tb_spacing"
            android:orientation="horizontal"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <Button
                android:id="@+id/button_ok"
                android:text="@string/ok"
                android:textSize="@dimen/normal_text"
                android:layout_width="0dp"
                android:layout_weight="1"
                android:layout_height="match_parent" />

            <Button
                android:id="@+id/button_cancel"
                android:text="@string/cancel"
                android:textSize="@dimen/normal_text"
                android:layout_width="0dp"
                android:layout_weight="1"
                android:layout_height="match_parent" />
        </LinearLayout>
    </LinearLayout>

    <ProgressBar
        android:visibility="gone"
        android:layout_gravity="center"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/progressBar" />

    <TextView
        android:textColor="@android:color/black"
        android:visibility="gone"
        android:textSize="@dimen/normal_text"
        android:layout_gravity="center"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/password_sent_to_your_email"
        android:id="@+id/text_success" />

</FrameLayout>